--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,18 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
-		"laravel/cashier": "5.0.2",
+		"laravel/framework": "5.1.*",
+		"laravel/cashier": "5.0.*",
         "laravel/socialite": "~2.0",
         "illuminate/html": "5.0.*@dev",
         "torann/hashids": "2.0.*@dev",
 		"intervention/image": "~2.1",
         "cohensive/embed": "5.0.0",
-        "guzzlehttp/guzzle": "~5.0",
-        "pda/pheanstalk": "~3.0"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "pda/pheanstalk": "~3.0",
+		"backup-manager/laravel": "~1.0",
+		"league/flysystem-dropbox": "~1.0"
+
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
