--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.1.*",
-		"laravel/cashier": "5.0.*",
+		"laravel/cashier": "5.0.10",
         "laravel/socialite": "~2.0",
         "illuminate/html": "5.0.*@dev",
         "torann/hashids": "2.0.*@dev",
@@ -15,7 +15,8 @@
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "pda/pheanstalk": "~3.0",
 		"backup-manager/laravel": "~1.0",
-		"league/flysystem-dropbox": "~1.0"
+		"league/flysystem-dropbox": "~1.0",
+	 	"pacely/mailchimp-apiv3": "dev-master"
 
 	},
 	"require-dev": {
