--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 		"intervention/image": "~2.1",
         "cohensive/embed": "5.0.0",
         "pda/pheanstalk": "~3.0",
-		"backup-manager/laravel": "~1.0",
-	 	"pacely/mailchimp-apiv3": "dev-master"
+	 	"pacely/mailchimp-apiv3": "dev-master",
+		"backup-manager/laravel": "^1.1"
 
 	},
 	"require-dev": {
